# Graduation-Project-Backup

./: own.sh
ACC/acc/: mdriver
ACC/acc/case01/: Makefile
ACC/acc/dijkstra/: Makefile  output
ACC/acc/dijkstra/src/: dijkstra.c  (+2 more)
ACC/acc/malloc/: Makefile
ACC/acc/patricia/: Makefile
ACC/acc/proxy/: Makefile  proxy
ACC/acc/qsort/: Makefile  a.out  exec.sh
ACC/src/.acc_dir/: grts.c  lexer.c  main.c  matchaa_ac.acc  matchaa_ac.c  matchinfo_ac.acc  matchinfo_ac.c
ACC/test/: log_case01  log_case02  log_case03  log_case04  log_case05  log_case06  log_case07  log_case08  log_case09  log_case10  log_case11  log_case91_minfo  log_case93  log_case94_argtype  log_case96_return_func_pointer  log_case98_fp
ACC/test/case01/: Makefile
ACC/test/case02/: Makefile
ACC/test/case03/: Makefile
ACC/test/case04/: Makefile
ACC/test/case08/: Makefile
ACC/test/case09/: Makefile
ACC/test/case11/: Makefile
ACC/test/case93/: Makefile
ACC/test/case94_argtype/: Makefile
ACC/test/case96_return_func_pointer/: Makefile
ACC/test/case98_fp/: Makefile
Origin/malloc/: Makefile  config.h  fsecs.c  helper.c  mdriver.c  mm.c  range.c  range.h
Origin/proxy/: Makefile  driver.sh  proxy  proxy.c
aspectc++/: Makefile
aspectc++/aspectc++/: Makefile.generic
aspectc++/aspectc++/coverage/: coverage
aspectc++/aspectc++/d1/: Makefile  dijkstra  dijkstra.c  dijkstra_advice.c  output
aspectc++/aspectc++/dijkstra/: Makefile  dijkstra  dijkstra_aop.ah  output
aspectc++/aspectc++/helloworld/: helloworld  main.cc  world.ah
aspectc++/aspectc++/malloc/: Makefile  aop.ah  fcyc.c  mdriver  mdriver.c  memlib.c  mm.c
aspectc++/aspectc++/modules/: modules
aspectc++/aspectc++/patricia/: Makefile  patricia  patricia_advice.c  patricia_advice.h  patricia_aop.ah  patricia_test.c
aspectc++/aspectc++/profiling/: profiling
aspectc++/aspectc++/proxy/: Makefile  aop.ah  aspect.c  csapp.c  proxy  proxy.c
aspectc++/aspectc++/qsort/: 123  Makefile  qsort_advice.ah  qsort_large  qsort_small  qsort_small.c
aspectc++/aspectc++/singleton/: singleton
aspectc++/aspectc++/threads/: threads
aspectc++/examples/coverage/: coverage
aspectc++/examples/helloworld/: helloworld
aspectc++/examples/modules/: modules
aspectc++/examples/profiling/: profiling
aspectc++/examples/singleton/: singleton
aspectc++/examples/threads/: threads
interaspect/: .gitignore  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  README  bootstrap.sh  cleanup.sh  configure.in  doxygen.am
interaspect/interaspect/: README  advice_header.c  duplicate.c  duplicate_test.c  hello.c
interaspect/interaspect/dijkstra/: dijkstra  dijkstra.c  dijkstra_advice.c  dijkstra_aop.c  output
interaspect/interaspect/malloc/: aop.c  mdriver  mdriver.c  mm.c  range.h
interaspect/interaspect/patricia/: 789  patricia  patricia_advice.c  patricia_aop.c
interaspect/interaspect/proxy/: aop.c  aspect.c  proxy
interaspect/interaspect/qsort/: a.out  exec.sh  qsort_advice.c  qsort_small
interaspect/src/: Makefile.am  aop-callback.h  aop-doxy-main.c  aop-duplicate.c  aop-duplicate.h  aop-dynval.h  aop-header.c  aop-header.h  aop-main.c  aop-pc-assign.c  aop-pc-entry.c  aop-pc-exit.c  aop-pc-fun-call.c  aop-pointcut.c  aop-pointcut.h  aop-type.c  aop-type.h  aop-weave.c  aop-weave.h  aop.h  nfa.c  nfa.h  tracecut-advice.c  tracecut-advice.h  tracecut.c  tracecut.h
interaspect/test/: Makefile.am  allpc-inparam-hooks.c  allpc-inparam-target.c  cast-hooks.c  cast-target.c  cast.xml  constants-hooks.c  constants-target.c  constants.xml  duplicate-hooks.c  duplicate-target.c  duplicate.xml  float-types-hooks.c  float-types-target.c  float-types.xml  inparam-hooks.c  inparam-target.c  inparam.xml  int-types-hooks.c  int-types-target.c  int-types.xml  noinstrument-hooks.c  noinstrument-target.c  noinstrument.xml  plugin-allpc-inparam.c  plugin-cast.c  plugin-constants.c  plugin-declare.c  plugin-duplicate.c  plugin-float-types.c  plugin-inparam.c  plugin-int-types.c  plugin-noinstrument.c  plugin-pointer-types.c  plugin-reinst-dup.c  plugin-reinst1.c  plugin-reinst2.c  plugin-return.c  plugin-struct-types.c  plugin-tracecut.c  (+21 more)
interaspect/web/: doxy-footer.html  doxy-header.html  doxygen.css
interaspect/workspace/: .gitignore  advice_header.c  duplicate.c  fclose_tracecut.c  hello.c  test
interaspect/workspace/mibench/automotive/qsort/: qsort  qsort_large  qsort_small
interaspect/workspace/qsort/: qsort_aop.c  qsort_small.c
mibench/automotive/bitcount/: bitcnts
mibench/network/dijkstra/: dijkstra_large.c  dijkstra_small.c
mibench/network/patricia/: 123  patricia  patricia_test.c
(+716 files in other folders)
