#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(InterAspect, 1.1.0)
AC_CONFIG_SRCDIR([src/aop-main.c])
# Note that we do not generate a config.h because GCC already uses a
# config.h that plugins must include.
#AC_CONFIG_HEADER([config.h])
AC_CONFIG_AUX_DIR(config)

m4_include(m4/ax_gcc_plugin.m4)
m4_include(m4/ax_prog_doxygen.m4)

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Get the plugin includes directory.
AX_GCC_PLUGIN

# Python for test cases
AM_PATH_PYTHON([2.6],
	, # Do nothing if Python is found.
	AC_MSG_WARN([Could not find Python binary.  Python 2.6 or newer is
	required for test cases.  Running make check will be disabled.]))
AM_CONDITIONAL([HAVE_PYTHON], [test "$PYTHON" != :])

# Doxygen
DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(OFF)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(OFF)
DX_PS_FEATURE(OFF)
DX_INIT_DOXYGEN([$PACKAGE_NAME],[Doxyfile],[doc])

# HACK: We want to give the Doxygen config file the source directory
# as an environment variable that definitely has a slash at the end.
# That way, we can specify a file as $(SRCDIR_SLASH)filename.  If the
# $(SRCDIR_SLASH) variable is not defined, the config file just uses
# the current directory.
DX_ENV_APPEND(SRCDIR_SLASH, $srcdir/)

AC_CONFIG_FILES([Makefile
                 src/Makefile
		 test/Makefile
		 workspace/Makefile])

AC_OUTPUT
